--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -1,13 +1,13 @@
 h1 　新規登録
 
 .nav.justify-content-expand
-  = link_to '一覧',tasks_path,class:'nav-link'
+  = link_to '一覧',tasks_path,class: 'nav-link'
 
-=form_with model : @task, local:true do |f|
+= form_with model: @task, local: true do |f|
   .form-group
-    =f.label :name
-    =f.text_field :name, class:'form-control', id 'task_name'
+    = f.label :タスク名
+    = f.text_field :name, class: 'form-control', id: 'task_name'
   .form-group
-    =f.label :description
-    =f.text_area :description, rows: 5, class:'form-control', id:'text_description'
-    =f.submit nil, class: 'btn btn-primary'
+    = f.label :内容
+    = f.text_area :contents, rows: 5, class: 'form-control', id: 'text_contents'
+  = f.submit nil, class: 'btn btn-primary'
