--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -8,11 +8,17 @@ table.table.table-hover
       th= Task.human_attribute_name(:ID)
       td= @task.id
     tr
-      th= Task.human_attribute_name(:タスク名)
+      th= Task.human_attribute_name(:name)
       td= @task.name
     tr
-      th= Task.human_attribute_name(:内容)
+      th= Task.human_attribute_name(:contents)
       td= simple_format(h(@task.contents), {}, sanitize: false, wrapper_tag: "div")
     tr
-      th= Task.human_attribute_name(:記入日)
-      td= @task.start
+      th= Task.human_attribute_name(:created_at)
+      td= @task.created_at
+    tr
+      th= Task.human_attribute_name(:dl)
+      td= @task.dl
+
+= link_to '編集', edit_task_path, class: 'btn btn-primary mr-3'
+= link_to '削除', @task, method: :delete, data: { confirm: "タスク「#{@task.name}」を削除します。よろしいですか？"}, class: 'btn btn-danger'
