updating the simple implementation

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,13 +2,15 @@ doctype html
 html
   head
     title
-      | App
+      | Taskleaf
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .app-title.navbar.nabar-expand-md.navbar-light.bg-light
       .navbar-brand Taskleaf
     .container
-    = yield
+      - if flash.notice.present?
+        .alert.alert-success= flash.notice
+      = yield
