--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,13 +1,13 @@
 h1 タスク一覧
 
-=link_to '新規登録', new_task_path, class: 'btn btn-primary'
+= link_to '新規登録', new_task_path, class: 'btn btn-primary'
 
 .mb-3
 table.table.table-hover
   thead.thead-default
     tr
       th= Task.human_attribute_name(:name)
-      th= Task.human_attribute_name(:name)
+      th= Task.human_attribute_name(:created_at)
       th
   tbody
     - @tasks.each do |task|
@@ -16,4 +16,4 @@ table.table.table-hover
         td= task.created_at
         td
           = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
-          = link_to '削除', task, method: :delete, data: { confirm: "タスク「#{task.name}」を削除します。よろしいですか？"　}, class: 'btn btn-danger'
+          = link_to '削除', task, method: :delete, data: { confirm: "タスク「#{task.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
