--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -7,7 +7,8 @@ table.table.table-hover
   thead.thead-default
     tr
       th= Task.human_attribute_name(:name)
-      th= Task.human_attribute_name(:name)
+      th= Task.human_attribute_name(:created_at)
+      th= Task.human_attribute_name(:dl)
       th
   tbody
     - @tasks.each do |task|
