--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -7,5 +7,5 @@
     = f.text_area :contents, rows: 5, class: 'form-control', id: 'task_contents'
   .form-group
     = f.label :dl
-    = f.text_field :dl, class: 'form-control', id: 'task_dl'
+    = f.date_select :dl, id: 'task_dl'
   = f.submit nil, class: 'btn btn-primary'
