--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -6,6 +6,6 @@
     = f.label :contents
     = f.text_area :contents, rows: 5, class: 'form-control', id: 'task_contents'
   .form-group
-    = f.label :dl
-    = f.date_select :dl, id: 'task_dl'
+    = f.label :deadline
+    = f.date_select :deadline, id: 'task_deadline'
   = f.submit nil, class: 'btn btn-primary'
