--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -10,4 +10,10 @@
   .form-group
     = f.label :contents
     = f.text_area :contents, rows: 5, class: 'form-control', id: 'task_contents'
+  .form-group
+    = f.label :priority
+    = f.select :priority, options_for_select(Task.priorities_i18n.keys.map {|k| [Task.priorities_i18n[k], k]}), class: 'form-control'
+  .form-group
+    = f.label :status
+    = f.select :status, options_for_select(Task.statuses_i18n.keys.map {|k| [Task.statuses_i18n[k], k]}), class: 'form-control'
   = f.submit nil, class: 'btn btn-primary'
