--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -8,12 +8,16 @@ table.table.table-hover
     tr
       th= Task.human_attribute_name(:name)
       th= Task.human_attribute_name(:created_at)
+      th= Task.human_attribute_name(:priority)
+      th= Task.human_attribute_name(:status)
       th
   tbody
     - @tasks.each do |task|
       tr
         td= link_to task.name, task_path(task)
         td= task.created_at
+        td= task.priority
+        td= task.status
         td
           = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
           = link_to '削除', task, method: :delete, data: { confirm: "タスク「#{task.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
