--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,14 +2,18 @@ doctype html
 html
   head
     title
-      | Taskleaf
+      | Task Management
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .app-title.navbar.nabar-expand-md.navbar-light.bg-light
-      .navbar-brand Taskleaf
+      .navbar-brand Task Management
+      .app-title.navbar.nabar-expand-md.navbar-light.bg-light
+        = form_tag tasks_path, :method => 'get' do
+          = text_field_tag :search, params[:search]
+          = submit_tag "検索"
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
