--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,8 @@ html
       .app-title.navbar.nabar-expand-md.navbar-light.bg-light
         = form_tag tasks_path, :method => 'get' do
           = text_field_tag :search, params[:search]
+          = form_tag tasks_path, method => 'get' do
+          = select_tag :status, params[:status]
           = submit_tag "検索", :name => nil
     .container
       - if flash.notice.present?
