--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -8,6 +8,9 @@
     = f.label :name
     = f.text_field :name, class: 'form-control', id: 'task_name'
   .form-group
+    = f.label :deadline
+    = f.date_select :deadline, id: 'task_deadline'
+  .form-group
     = f.label :contents
     = f.text_area :contents, rows: 5, class: 'form-control', id: 'task_contents'
   .form-group
@@ -16,6 +19,4 @@
   .form-group
     = f.label :status
     = f.select :status, options_for_select(Task.statuses_i18n.keys.map {|k| [Task.statuses_i18n[k], k]}), class: 'form-control'
-    = f.label :deadline
-    = f.date_select :deadline, id: 'task_deadline'
   = f.submit nil, class: 'btn btn-primary'
