--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -12,10 +12,10 @@
     = f.text_area :contents, rows: 5, class: 'form-control', id: 'task_contents'
   .form-group
     = f.label :priority
-    = f.select :priority, options_for_select(Task.priorities_i18n.keys.map {|k| [Task.priorities_i18n[k], k]}), class: 'form-control', id: 'task_priority'
+    = f.select :priority, options_for_select(Task.priorities_i18n.keys.map {|k| [Task.priorities_i18n[k], k]}), class: 'form-control'
   .form-group
     = f.label :status
-    = f.select :status, options_for_select(Task.statuses_i18n.keys.map {|k| [Task.statuses_i18n[k], k]}), class: 'form-control', id: 'task_status'
+    = f.select :status, options_for_select(Task.statuses_i18n.keys.map {|k| [Task.statuses_i18n[k], k]}), class: 'form-control'
   .form-group
     = f.label :deadline
     = f.date_select :deadline, id: 'task_deadline'
