--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -15,7 +15,7 @@
     = f.select :priority, options_for_select(Task.priorities_i18n.keys.map {|k| [Task.priorities_i18n[k], k]}), class: 'form-control'
   .form-group
     = f.label :status
-    = f.select :status, options_for_select(Task.statuses_i18n.keys.map {|k| [Task.statuses_i18n[k], k]}), class: 'form-control'
+    = f.select :status, options_for_select(Task.statuses_i18n.keys.map {|k| [Task.statuses_i18n[k], k]}), class: 'form-control', id: 'task_status'
   .form-group
     = f.label :deadline
     = f.date_select :deadline, id: 'task_deadline'
