--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,4 +1,14 @@
 h1 タスク一覧
+.mb-3
+  =form_with url: tasks_path, method: "get", local: true do |f|
+   .form-inline
+    .form-group(style="margin-right: 5%;")
+      = f.label "タスク名"
+      = f.text_field :search, class: 'form-control'
+    .form-group(style="margin-right: 5%;")
+      = f.label"ステータス"
+      = f.select :status, options_for_select(Task.statuses {|k| [Task.statuses_i18n[k], k]}), class: 'form-control'
+    = f.submit "検索", class: 'btn btn-outline-primary'
 
 = link_to '新規登録', new_task_path, class: 'btn btn-primary'
 
