--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -6,10 +6,10 @@
 = form_with model: [:admin, user], local: true do |f|
   .form-group
     = f.label :name, '名前'
-    = f.text_field :name, class 'form-control'
+    = f.text_field :name, class: 'form-control'
   .form-group
     = f.label :email, 'メールアドレス'
-    = f.text_field :email, class 'form-control'
+    = f.text_field :email, class: 'form-control'
   .form-check
     = f.label :admin, class: 'form-check-label' do
       = f.check_box :admin, class: 'form-check-input'
