--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -12,6 +12,7 @@ table.table.table-hover
       th= User.human_attribute_name(:created_at)
       th= User.human_attribute_name(:updated_at)
       th
+        |タスク数
   tbody
     - @users.each do |user|
       tr
@@ -20,6 +21,7 @@ table.table.table-hover
         td= user.admin? ? 'あり' : 'なし'
         td= user.created_at
         td= user.updated_at
+        td= user.tasks.count
         td
           = link_to '編集', edit_admin_user_path(user), class: 'btn btn-primary mr-3'
           = link_to '削除', [:admin, user], method: :delete, data: { confirm: "ユーザー「#{user.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
