--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -19,5 +19,5 @@ table.table.table-hover
         td= task.priority
         td= task.status
         td
-          = link_to '編集', edit_task_path(task), class: 'btn btn-primary mr-3'
+          = link_to '編集', edit_task_path(task.id), class: 'btn btn-primary mr-3'
           = link_to '削除', task, method: :delete, data: { confirm: "タスク「#{task.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
