--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,4 +22,8 @@ html
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
+      - if flash[:notice]
+      .alert.alert-success= flash[:notice]
+      - if flash[:danger]
+      .alert.alert-danger= flash[:danger]
       = yield
